adjusted the post requests to be easier
